--- a/Blog/Web.config
+++ b/Blog/Web.config
@@ -19,7 +19,7 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   <add key="owin:AppStartup" value="Blog.Startup,Blog" /></appSettings>
   <system.web>
-    <compilation debug="false" targetFramework="4.5" />
+    <compilation debug="true" targetFramework="4.5" />
     <httpRuntime targetFramework="4.5" />
     <httpHandlers>
       <add path="*.less" verb="GET" type="dotless.Core.LessCssHttpHandler, dotless.Core" />
