--- a/Blog/Blog.csproj
+++ b/Blog/Blog.csproj
@@ -1253,6 +1253,7 @@
     <Compile Include="ViewModels\Blog\CreateBlogViewModel.cs" />
     <Compile Include="ViewModels\Blog\EditBlogViewModel.cs" />
     <Compile Include="ViewModels\ManageViewModels.cs" />
+    <Compile Include="ViewModels\PostCategory\EditPostCategory.cs" />
     <Compile Include="ViewModels\Post\CreatePost.cs" />
   </ItemGroup>
   <ItemGroup>
