--- a/Blog/Web.config
+++ b/Blog/Web.config
@@ -10,7 +10,7 @@
     <section name="dotless" type="dotless.Core.configuration.DotlessConfigurationSectionHandler, dotless.Core" />
   </configSections>
   <connectionStrings>
-    <add name="BlogDbContext" connectionString="data source=(localdb)\v11.0; ;attachdbfilename=|DataDirectory|\BlogDb.mdf;integrated security=True;multipleactiveresultsets=True;" providerName="System.Data.SqlClient" />
+    <add name="BlogDbContext" connectionString="data source=(localdb)\v11.0; ;attachdbfilename=|DataDirectory|\BlogDb.mdf;Initial Catalog=BlogDb;integrated security=True;multipleactiveresultsets=True;" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
