--- a/Blog/Web.config
+++ b/Blog/Web.config
@@ -12,8 +12,7 @@
   </configSections>
   <connectionStrings>
     <!--Using SQL Compact-->
-    <add name="BlogDbContext" connectionString="Data Source=|DataDirectory|\BlogDb.sdf"
-          providerName="System.Data.SqlServerCe.4.0" />
+    <add name="BlogDbContext" connectionString="Data Source=|DataDirectory|\BlogDb.sdf" providerName="System.Data.SqlServerCe.4.0" />
     <!--
     <add name="BlogDbContext" connectionString="data source=(localdb)\v11.0; ;attachdbfilename=|DataDirectory|\BlogDb.mdf;Initial Catalog=BlogDb;integrated security=True;multipleactiveresultsets=True;" providerName="System.Data.SqlClient" />
 -->
@@ -27,6 +26,8 @@
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.5" />
+    <!--TODO remove custom errors-->
+    <customErrors mode="Off" />
     <httpRuntime targetFramework="4.5" />
     <httpHandlers>
       <add path="*.less" verb="GET" type="dotless.Core.LessCssHttpHandler, dotless.Core" />
@@ -85,7 +86,8 @@
     <providers>
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
       <provider invariantName="System.Data.SqlServerCe.4.0" type="System.Data.Entity.SqlServerCompact.SqlCeProviderServices, EntityFramework.SqlServerCompact" />
-    </providers>
+    
+  </providers>
   </entityFramework>
   <dotless minifyCss="false" cache="true" web="false" strictMath="false" />
   <system.webServer>
