--- a/Blog/packages.config
+++ b/Blog/packages.config
@@ -25,6 +25,9 @@
   <package id="Microsoft.AspNet.WebApi.OData" version="5.2.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebApi.WebHost" version="5.2.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebPages" version="3.2.0" targetFramework="net45" />
+  <package id="Microsoft.Bcl" version="1.1.8" targetFramework="net45" />
+  <package id="Microsoft.Bcl.Async" version="1.0.168" targetFramework="net45" />
+  <package id="Microsoft.Bcl.Build" version="1.0.14" targetFramework="net45" />
   <package id="Microsoft.Data.Edm" version="5.6.0" targetFramework="net45" />
   <package id="Microsoft.Data.OData" version="5.6.0" targetFramework="net45" />
   <package id="Microsoft.jQuery.Unobtrusive.Validation" version="3.1.1" targetFramework="net45" />
@@ -47,4 +50,6 @@
   <package id="System.Spatial" version="5.6.0" targetFramework="net45" />
   <package id="System.Web.Optimization.Less" version="1.3.4" targetFramework="net45" />
   <package id="WebGrease" version="1.5.2" targetFramework="net45" />
+  <package id="X.PagedList" version="1.24.1.300" targetFramework="net45" />
+  <package id="X.PagedList.Mvc" version="4.7.0.2" targetFramework="net45" />
 </packages>
