--- a/Blog/Blog.csproj
+++ b/Blog/Blog.csproj
@@ -457,6 +457,7 @@
     <Content Include="SPA\Controllers\Menu.js" />
     <Content Include="SPA\Controllers\Appearance.js" />
     <Content Include="SPA\Controllers\Header.js" />
+    <Content Include="SPA\Controllers\Posts.js" />
     <Content Include="SPA\Services\DashboardService.js" />
     <Content Include="Views\NgPartials\EditHeader.cshtml" />
     <Content Include="Views\Blogs\Index.cshtml" />
@@ -464,6 +465,7 @@
     <Content Include="Scripts\AdminPanel\app.min.js.map">
       <DependentUpon>app.min.js</DependentUpon>
     </Content>
+    <Content Include="Views\NgPartials\Posts.cshtml" />
     <None Include="_bin_deployableAssemblies\x86\sqlcese40.dll" />
     <None Include="_bin_deployableAssemblies\x86\sqlceqp40.dll" />
     <None Include="_bin_deployableAssemblies\x86\sqlceme40.dll" />
@@ -1342,6 +1344,7 @@
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\AdminPanelController.cs" />
     <Compile Include="Controllers\Api\AccountsController.cs" />
+    <Compile Include="Controllers\Api\BaseApiController.cs" />
     <Compile Include="Controllers\Api\BlogsController.cs" />
     <Compile Include="Controllers\Api\CurrentUserController.cs" />
     <Compile Include="Controllers\Api\DashboardController.cs" />
@@ -1403,6 +1406,7 @@
     <Compile Include="ViewModels\AdminPanel\BlogInformationViewModel.cs" />
     <Compile Include="ViewModels\AdminViewModel.cs" />
     <Compile Include="ViewModels\Api\DashboardViewModel.cs" />
+    <Compile Include="ViewModels\Api\Posts.cs" />
     <Compile Include="ViewModels\Blog\CreateBlogViewModel.cs" />
     <Compile Include="ViewModels\Blog\DisplayBlog.cs" />
     <Compile Include="ViewModels\Blog\EditBlogViewModel.cs" />
