--- a/Blog/Blog.csproj
+++ b/Blog/Blog.csproj
@@ -233,6 +233,7 @@
     <Content Include="Content\AdminPanel\skin-blue.min.css">
       <DependentUpon>skin-blue.css</DependentUpon>
     </Content>
+    <Content Include="Content\ag-grid.css" />
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
     <Content Include="Content\images\header-bg.gif" />
@@ -250,6 +251,7 @@
     <Content Include="Content\MainSite\slider.css" />
     <Content Include="Content\PagedList.css" />
     <Content Include="Content\Site.css" />
+    <Content Include="Content\theme-bootstrap.css" />
     <Content Include="Content\themes\base\accordion.css" />
     <Content Include="Content\themes\base\all.css" />
     <Content Include="Content\themes\base\autocomplete.css" />
@@ -311,6 +313,7 @@
     <Content Include="Scripts\AdminPanel\demo.js" />
     <Content Include="Scripts\AdminPanel\pages\dashboard.js" />
     <Content Include="Scripts\AdminPanel\pages\dashboard2.js" />
+    <Content Include="Scripts\ag-grid.js" />
     <Content Include="Scripts\angular\angular-animate.js" />
     <Content Include="Scripts\angular\angular-animate.min.js" />
     <Content Include="Scripts\angular\angular-aria.js" />
