--- a/Blog/Blog.csproj
+++ b/Blog/Blog.csproj
@@ -233,6 +233,7 @@
     <Content Include="Content\AdminPanel\skin-blue.min.css">
       <DependentUpon>skin-blue.css</DependentUpon>
     </Content>
+    <Content Include="Content\angular-datatables.css" />
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
     <Content Include="Content\images\header-bg.gif" />
@@ -311,6 +312,7 @@
     <Content Include="Scripts\AdminPanel\demo.js" />
     <Content Include="Scripts\AdminPanel\pages\dashboard.js" />
     <Content Include="Scripts\AdminPanel\pages\dashboard2.js" />
+    <Content Include="Scripts\angular-datatables.js" />
     <Content Include="Scripts\angular\angular-animate.js" />
     <Content Include="Scripts\angular\angular-animate.min.js" />
     <Content Include="Scripts\angular\angular-aria.js" />
