--- a/Blog/Blog.csproj
+++ b/Blog/Blog.csproj
@@ -461,6 +461,8 @@
     <Content Include="SPA\Controllers\Menu.js" />
     <Content Include="SPA\Controllers\Appearance.js" />
     <Content Include="SPA\Controllers\Header.js" />
+    <Content Include="SPA\Controllers\Categories.js" />
+    <Content Include="SPA\Controllers\CategoryAdd.js" />
     <Content Include="SPA\Controllers\Posts.js" />
     <Content Include="SPA\Services\BlogCategoryService.js" />
     <Content Include="SPA\Services\DashboardService.js" />
@@ -471,6 +473,8 @@
       <DependentUpon>app.min.js</DependentUpon>
     </Content>
     <Content Include="Views\NgPartials\Posts.cshtml" />
+    <Content Include="Views\NgPartials\Categories.cshtml" />
+    <Content Include="Views\NgPartials\CategoryAdd.cshtml" />
     <None Include="_bin_deployableAssemblies\x86\sqlcese40.dll" />
     <None Include="_bin_deployableAssemblies\x86\sqlceqp40.dll" />
     <None Include="_bin_deployableAssemblies\x86\sqlceme40.dll" />
